# ilamb3

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  LICENSE  README.md  azure-pipelines.yml  pyproject.toml  setup.cfg
.github/: CODEOWNERS
.github/workflows/: ci.yml  pypi.yml
ci/: environment-docs.yml  environment.yml
docs/: analysis.md  api.rst  basic.md  bias.md  conf.py  configure_yaml.md  datasets.md  deep_dive.md  expansion.md  getting_started.md  global_options.md  glossary.md  how_do_i.md  index.md  index.rst  installation.md  intake.md  jupyter.md  myst.yml  nbp.md  organize.md  prelim.md  quickstart.md  relationship.md  requirements.txt  run.md  setup_doc_assets.py  transform.md  transforms.md  tutorial_01_run.md
docs-sphinx/: README.md  conf.py  datasets.md  how_do_i.md  index.md  intake.md  setup_doc_assets.py
docs/assets/: my_analysis_function.py
ilamb3/: __init__.py  analysis.py  cache.py  compare.py  config.py  dataset.py  dset.py  esgf.py  exceptions.py  load.py  meta.py  parallel.py  plot.py  post.py  regions.py  run.py  score.py  workflow.py
ilamb3/analysis/: __init__.py  accumulate.py  area.py  base.py  bias.py  cycle.py  dispersion.py  hydro.py  nbp.py  quantiles.py  relationship.py  rmse.py  runoff_sensitivity.py  spatial_distribution.py  timeseries.py
ilamb3/cli/: __init__.py
ilamb3/compare/: __init__.py  base.py  neighborhood.py
ilamb3/configure/: ilamb.yaml  iomb.yaml
ilamb3/models/: __init__.py  base.py  esgf.py
ilamb3/registry/: ilamb.txt  ilamb3.txt  iomb.txt  test.txt
ilamb3/templates/: dataset_page.html  directory.html  unified_dashboard.html
ilamb3/tests/: comprehensive.py  conftest.py  test_bias.py  test_cli.py  test_compare.py  test_config.py  test_dataset.py  test_dispersion.py  test_esgf.py  test_exceptions.py  test_hydro.py  test_load.py  test_nbp.py  test_neighborhood.py  test_plot.py  test_post.py  test_quantiles.py  test_regions.py  test_registry.py  test_relationship.py  test_run.py  test_runoff.py  test_transform.py  test_xarray.py
ilamb3/transform/: __init__.py  aggregate.py  amoc.py  base.py  condition.py  daily_threshold_index.py  expression.py  gradient.py  integrate.py  label.py  mask.py  ohc.py  permafrost.py  quantile.py  runoff_sensitivity.py  select.py  soilmoisture.py  stratification_index.py
