[project]
authors = [{ name = "Nathan Collier", email = "nathaniel.collier@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
description = "Earth system model benchmarking"
dynamic = ["version"]
license = "BSD-3-Clause"
name = "ilamb3"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "cf-xarray>=0.10.0",
  "numpy>=2.2.2",
  "pandas>=2.2.3",
  "pint-xarray>=0.4",
  "xarray>=2025.1.1",
  "netcdf4>=1.7.2",
  "pooch>=1.8.2",
  "scipy>=1.15.1",
  "matplotlib>=3.10.0",
  "cartopy>=0.24.1",
  "pyyaml>=6.0.2",
  "jinja2>=3.1.5",
  "statsmodels>=0.14.4",
  "loguru>=0.7.3",
  "dask>=2025.2.0",
  "nc-time-axis>=1.4.1",
]

[dependency-groups]
dev = ["pytest", "pytest-cov"]
doc = [
  "furo>=2024.8.6",
  "ipython>=8.31.0",
  "myst-nb>=1.1.2",
  "numpydoc>=1.8.0",
  "sphinx-autodoc-typehints>=3.0.1",
  "sphinx-autosummary-accessors>=2023.4.0",
  "sphinx-copybutton>=0.5.2",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42", "setuptools-scm>=7"]

[tool.setuptools]
packages = [
  "ilamb3",
  "ilamb3.analysis",
  "ilamb3.transform",
  "ilamb3.tests",
  "ilamb3.registry",
  "ilamb3.templates",
]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "node-and-date"
fallback_version = "0.0.0"
write_to = "ilamb3/_version.py"

[tool.setuptools.package-data]
ilamb3 = ["templates/*.html"]

[tool.pytest.ini_options]
console_output_style = "count"
addopts = "--cov=ilamb3 --cov-report=xml --verbose"

[tool.coverage.run]
omit = ["*/ilamb3/tests/*", "*/ilamb3/_version.py"]
source = ["ilamb3"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]

[tool.ruff]
extend-exclude = ["docs"]
target-version = "py310"
[tool.ruff.lint]
ignore = ["E402", "E501", "E731"]
select = [
  "F",   # Pyflakes
  "E",   # Pycodestyle
  "W",
  "TID", # flake8-tidy-imports (absolute imports)
  "I",   # isort
  "UP",  # Pyupgrade
]

[tool.ruff.lint.isort]
known-first-party = ["ilamb3"]

[tool.numpydoc_validation]
checks = [
  "all",  # report on all checks, except the below
  "EX01",
  "SA01",
  "ES01",
]
exclude = ['test_.*']
