[project]
authors = [{ name = "Nathan Collier", email = "nathaniel.collier@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
]
description = "Earth system model benchmarking"
dynamic = ["version"]
license = "BSD-3-Clause"
name = "ilamb3"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "cartopy>=0.25.0",
    "cf-xarray>=0.11.1",
    "dask>=2026.3.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "matplotlib>=3.10.9",
    "nc-time-axis>=1.4.1",
    "netcdf4>=1.7.4",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pint-xarray>=0.6.1",
    "pooch>=1.9.0",
    "pyarrow>=24.0.0",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.3",
    "typer>=0.26.7",
    "xarray>=2026.4.0",
]

[dependency-groups]
dev = ["pytest", "pytest-cov"]
docs = [
  "intake-esgf>=2025.10.22",
  "ipykernel>=7.2.0",
  "jupyter>=1.1.1",
  "jupyterlab-myst>=2.6.0",
  "mystmd>=1.8.3",
]
esgf = [
    "intake-esgf>=2026.6.4",
]
gcb = ["gsw>=3.6.19"]
parallel = ["mpi4py>=4.1.0"]

[project.scripts]
ilamb = "ilamb3.cli:app"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42", "setuptools-scm>=7"]

[tool.setuptools]
packages = [
  "ilamb3",
  "ilamb3.analysis",
  "ilamb3.transform",
  "ilamb3.tests",
  "ilamb3.registry",
  "ilamb3.templates",
]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "node-and-date"
fallback_version = "0.0.0"
write_to = "ilamb3/_version.py"

[tool.setuptools.package-data]
ilamb3 = ["templates/*.html"]

[tool.pytest.ini_options]
console_output_style = "count"
addopts = "--cov=ilamb3 --cov-report=xml --verbose -m 'not (parallel)'"
markers = ["parallel: requires mpi4py installed"]

[tool.coverage.run]
omit = ["*/ilamb3/tests/*", "*/ilamb3/_version.py"]
source = ["ilamb3"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]

[tool.ruff]
extend-exclude = ["docs"]
target-version = "py310"
[tool.ruff.lint]
ignore = ["E402", "E501", "E731"]
select = [
  "F",   # Pyflakes
  "E",   # Pycodestyle
  "W",
  "TID", # flake8-tidy-imports (absolute imports)
  "I",   # isort
  "UP",  # Pyupgrade
]

[tool.ruff.lint.isort]
known-first-party = ["ilamb3"]

[tool.numpydoc_validation]
checks = [
  "all",  # report on all checks, except the below
  "EX01",
  "SA01",
  "ES01",
]
exclude = ['test_.*']
