[metadata]
name = ilamb3
author = Nathan Collier
author_email = nathaniel.collier@gmail.com
license = BSD-3-Clause
description = Software used in the International Land Model Benchmarking (ILAMB) project
long_description_content_type=text/markdown
long_description =

    The python package designed to help confront earth system models with reference
    data products, and then present the results in a hierarchical set of webpages.
    Please see [ilamb.org](https://www.ilamb.org) where we have details about the
    datasets we use, the results we catalog, and the methods we employ.

    ## Learn more

    - Project
    - Documentation: https://www.ilamb.org/doc
    - Issue tracker: https://github.com/nocollier/ilamb3/issues
    - Source code: https://github.com/nocollier/ilamb3

url = https://www.ilamb.org
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
install_requires =
    numpy
    pandas
    xarray
    pint-xarray
    cf-xarray
    scipy

[tool:pytest]
python_files = test_*.py
testpaths = ilamb3/tests
